<resources>
    <string name="app_name">Android Scripter</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>

    <string-array name="overlay_displays_ids">
        <item>script_log</item>
        <item>point_analysis</item>
        <item>ocr</item>
    </string-array>
    <string-array name="overlay_displays">
        <item>Script &amp; Log</item>
        <item>Point Analysis</item>
        <item>Screen Text</item>
    </string-array>

    <string-array name="log_level_names">
        <item>Debug</item>
        <item>Verbose</item>
        <item>Info</item>
        <item>Warning</item>
        <item>Error</item>
    </string-array>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="log">Log</string>
    <string name="log_level_colon">Log Level:</string>
    <string name="title_activity_script_list">ScriptListActivity</string>
    <string name="show_overlay">Show Overlay</string>

    <string name="screen_size_colon">Screen Size:</string>
    <string name="location_colon">Location:</string>
    <string name="color_colon">Colour:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="script_exec_pref_header">Script Execution</string>

    <!-- Script Exec Preferences -->
    <string name="log_text_size_title">Log Text Size</string>
    <string name="log_text_size_summary">01/01 12:00:00: Sample log text</string>
    <string name="title_activity_debug_exception_viewer">Debug Exception Viewer</string>
    <string name="title_activity_debug_pointer_viewer">Debug Pointer Viewer</string>

    <!-- Notification Strings -->
    <string name="screen_cap_notification_text">Android Scripter is able to see the screen content</string>
</resources>
