<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.tsiemens.androidscripter.activity.ScriptListActivity">

    <item android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            android:icon="@drawable/ic_refresh_white_48"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_edit"
          android:title="@string/action_edit"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_launch_pointer_debug_activity"
            android:title="@string/title_activity_debug_pointer_viewer"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
