<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.tsiemens.androidscripter.activity.ScriptListActivity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
            android:icon="@drawable/ic_settings_white_48"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_launch_screen_cap_debug_activity"
            android:title="Screencap Debug Activity"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_launch_prototype_activity"
            android:title="Prototype Activity"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_launch_exceptions_activity"
            android:title="@string/title_activity_debug_exception_viewer"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_launch_pointer_debug_activity"
            android:title="@string/title_activity_debug_pointer_viewer"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_licenses"
            android:title="License"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
